--- a/vignettes/youbike.Rmd
+++ b/vignettes/youbike.Rmd
@@ -25,7 +25,7 @@ suppressWarnings(df <- resourceAquire(rid$resourceId[1]))
 strsplit(rs$fieldDescription, "\r\n")
 df2 <- mutate(df, lat = as.numeric(lat), lng = as.numeric(lng))
 bdy_location <- select(df2, lng, lat) %>% apply(MARGIN = 2, range)
-qmap(location = c(bdy_location[c(1, 3, 2, 4)]), legend = "topleft") +
-  geom_point(aes(x = lng, y = lat, size = bemp), data = df2)
+qmap(location = c(bdy_location[c(1, 3, 2, 4)]), zoom = 14,legend = "topleft") +
+  geom_point(aes(x = lng, y = lat, size = bemp), colour = "blue",data = df2)
 plot(g)
 ```
